@@ -6,7 +6,9 @@ import org.springframework.cloud.gateway.filter.GatewayFilter;
 import org.springframework.cloud.gateway.filter.factory.AbstractGatewayFilterFactory;
 import org.springframework.core.io.buffer.DefaultDataBufferFactory;
 import org.springframework.http.*;
+import org.springframework.http.server.reactive.ServerHttpResponse;
 import org.springframework.stereotype.Component;
+import org.springframework.web.client.HttpClientErrorException;
 import org.springframework.web.client.RestTemplate;
 import pl.networkmanager.bilka.gateway.config.Carousel;
 import pl.networkmanager.bilka.gateway.utils.JwtUtils;
@@ -38,17 +40,16 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
     @Override
     public GatewayFilter apply(Config config) {
         return ((exchange, chain) -> {
-            log.info("--START GatewayFilter--");
+            log.info("--START GatewayFilter");
             if (validator.isSecure.test(exchange.getRequest())) {
                 if (!exchange.getRequest().getCookies().containsKey(HttpHeaders.AUTHORIZATION) && !exchange.getRequest().getCookies().containsKey("refresh")) {
                     exchange.getResponse().setStatusCode(HttpStatus.UNAUTHORIZED);
                     exchange.getResponse().getHeaders().setContentType(MediaType.APPLICATION_JSON);
-
                     StringBuilder stringBuilder = new StringBuilder("{\n")
                             .append("\"timestamp\": \"")
                             .append(new Timestamp(System.currentTimeMillis()))
                             .append("\",\n")
-                            .append("\"messages\": [\"missing authroization header\"],\n")
+                            .append("\"messages\": [\"missing authorization token\"],\n")
                             .append("\"code\": \"A3\"\n")
                             .append("}");
 
@@ -57,12 +58,12 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
                             .wrap((stringBuilder.toString()).getBytes())));
                 }
 
-                HttpCookie authCookie = exchange.getRequest().getCookies().get(HttpHeaders.AUTHORIZATION).get(0);
-                HttpCookie refreshCookie = exchange.getRequest().getCookies().get("refresh").get(0);
-                log.info("--START validate token--");
+                HttpCookie authCookie = exchange.getRequest().getCookies().get(HttpHeaders.AUTHORIZATION).getFirst();
+                HttpCookie refreshCookie = exchange.getRequest().getCookies().get("refresh").getFirst();
+                log.info("--START validate Token");
                 try {
                     if (activeProfile.equals("test")) {
-                        log.debug("Init self auth methods (only for test profile)");
+                        log.debug("Init self auth methods (only for tests)");
                         jwtUtil.validateToken(authCookie.getValue());
                     } else {
                         String cookies = new StringBuilder()
@@ -73,12 +74,15 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
                                 .append(refreshCookie.getName())
                                 .append("=")
                                 .append(refreshCookie.getValue()).toString();
-
                         HttpHeaders httpHeaders = new HttpHeaders();
                         httpHeaders.add("Cookie", cookies);
                         HttpEntity<Object> entity = new HttpEntity<>(httpHeaders);
-                        ResponseEntity<String> response = template.exchange("http://" + carousel.getUriAuth() + "/api/v1/auth/validate", HttpMethod.GET, entity, String.class);
-
+                        ResponseEntity<String> response;
+                        if (validator.isAdmin.test(exchange.getRequest())) {
+                            response = template.exchange("http://" + carousel.getUriAuth() + "/api/v1/auth/authorize", HttpMethod.GET, entity, String.class);
+                        } else {
+                            response = template.exchange("http://" + carousel.getUriAuth() + "/api/v1/auth/validate", HttpMethod.GET, entity, String.class);
+                        }
                         if (response.getStatusCode() == HttpStatus.OK) {
                             List<String> cookiesList = response.getHeaders().get(HttpHeaders.SET_COOKIE);
                             if (cookiesList != null) {
@@ -97,13 +101,19 @@ public class AuthenticationFilter extends AbstractGatewayFilterFactory<Authentic
                             log.info("Successful login");
                         }
                     }
-                } catch (Exception e) {
-                    log.warn("Cannt login bad token");
-                    exchange.getResponse().writeWith(Flux.just(new DefaultDataBufferFactory().wrap(e.getMessage().getBytes())));
+                } catch (HttpClientErrorException e) {
+                    log.warn("Can't login bad token");
+                    String message = e.getMessage().substring(7);
+                    message = message.substring(0, message.length() - 1);
+                    ServerHttpResponse response = exchange.getResponse();
+                    HttpHeaders headers = response.getHeaders();
+                    headers.setContentType(MediaType.APPLICATION_JSON);
+                    response.setStatusCode(HttpStatus.UNAUTHORIZED);
+                    return exchange.getResponse().writeWith(Flux.just(new DefaultDataBufferFactory().wrap(message.getBytes())));
                 }
             }
-            log.info("--END validate token--");
-            log.info("--END GatewayFilter--");
+            log.info("--STOP validate Token");
+            log.info("--STOP GatewayFilter");
             return chain.filter(exchange);
         });
     }
